<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
    <parent>
        <artifactId>parent-pom</artifactId>
        <groupId>com.randomnoun.build</groupId>
        <version>1.33</version>
    </parent>
	
	<groupId>com.randomnoun.common</groupId>
	<artifactId>common-public</artifactId>
	<version>1.0.26-SNAPSHOT</version>
	<packaging>jar</packaging>
	
	<name>randomnoun common classes</name>
	<description>Common utility classes</description>
	<url>https://github.com/randomnoun/common-public</url>
	<inceptionYear>2013</inceptionYear>
	<!-- version before 1.0.0 bump was 0.2.29 -->

    <properties>
        <jdk.version>17</jdk.version><!-- jdk17 for jessop, for historyTableGenerator -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <optional>true</optional>
        </dependency>
        <!-- keep the log4j 1 interfaces as some downstream projects still use log4j 1 appenders -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-1.2-api</artifactId>
            <optional>true</optional>
        </dependency>
        
		<dependency>
       		<groupId>com.randomnoun.common</groupId>
			<artifactId>jessop</artifactId>
			<version>1.0.21</version>
		</dependency>

        <dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<scope>provided</scope>
		</dependency>
        <dependency>
        	<groupId>javax.servlet.jsp</groupId>
        	<artifactId>jsp-api</artifactId>
        	<scope>provided</scope>
        </dependency>
        
        <dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-core</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-context-support</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-tx</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-jdbc</artifactId>
		</dependency>
		

		<dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
		</dependency>

		<!-- used to be a sub-dep of struts, now required for Struct; @TODO remove -->
		<dependency>
			<groupId>commons-beanutils</groupId>
  			<artifactId>commons-beanutils</artifactId>
  			<version>1.9.4</version>
  		</dependency>
  
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20240303</version>
			<scope>compile</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.ccil.cowan.tagsoup</groupId>
			<artifactId>tagsoup</artifactId>
		</dependency>

		<dependency>
            <groupId>jakarta.mail</groupId>
            <artifactId>jakarta.mail-api</artifactId> 
      	</dependency>

		<dependency>
            <groupId>org.mariadb.jdbc</groupId>
            <artifactId>mariadb-java-client</artifactId>
			<scope>test</scope>
        </dependency>
		
		
		<dependency>
			<groupId>com.mchange</groupId>
			<artifactId>c3p0</artifactId>
			<type>jar</type>
			<optional>true</optional>
		</dependency>
		
	</dependencies>

	
	<scm>
		<connection>scm:git:http://gitlab.dev.randomnoun/randomnoun/common-public.git</connection>
		<developerConnection>scm:git:http://gitlab.dev.randomnoun/randomnoun/common-public.git</developerConnection>
		<url>http://gitlab.dev.randomnoun/randomnoun/common-public</url>
      <tag>HEAD</tag>
  </scm>
	
	<ciManagement>
		<system>Bamboo</system>
		<url>http://bamboo.dev.randomnoun/browse/RANDOMNOUN-COMMONPUBLIC</url>
	</ciManagement>
	

	<build>
		<plugins>
            
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>javacc-maven-plugin</artifactId>
				<version>2.5</version>
				<executions>
					<execution>
						<id>jtb-javacc</id>
						<goals>
							<goal>jtb-javacc</goal>
						</goals>
						<configuration>
							<nodePackageName>com.randomnoun.common.jexl.ast</nodePackageName>
							<visitorPackageName>com.randomnoun.common.jexl.visitor</visitorPackageName>
							<javadocFriendlyComments>true</javadocFriendlyComments>
							<descriptiveFieldNames>true</descriptiveFieldNames>
							<printer>true</printer>
						</configuration>
					</execution>
				</executions>
			</plugin>
			
          	
		</plugins>
		
		<pluginManagement>
		  <plugins>
		      <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <!-- 
                  this configuration is used during the javadoc:jar goal during the release
                  configuration for the reports is in the <reporting> section  
                -->
                <configuration>
                    <additionalparam>-Xdoclint:none</additionalparam>
                    <failOnError>false</failOnError>
                    <sourcepath>src/main/java;target/generated-sources/javacc;target/generated-sources/jtb</sourcepath>
                    <javadocDirectory>${project.basedir}/src/main/javadoc</javadocDirectory>
                    <docfilessubdirs>true</docfilessubdirs>
                    <author>true</author>
                    <linksource>true</linksource>
                </configuration>
            </plugin>
            
             
		      
		  </plugins>
		</pluginManagement>
	</build>
	
	<distributionManagement>
		<site>
        	<id>gh-pages</id>
        	<name>common-public website</name>
	        <url>git:http://gitlab.dev.randomnoun/randomnoun/common-public.git?gh-pages#</url>
    	</site>
    	<repository>
          <id>github-maven-pkg</id>
          <name>gihub package repository</name>
          <url>https://maven.pkg.github.com/randomnoun/common-public</url>
        </repository>
	</distributionManagement>

</project>